src/screens/chart-notes/chart-notes-details/ChartNotesDetailsScreen.scss
@import "src/assets/styles/common";

.chart-notes-details-screen {

  .client-details-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 5px 0 25px;
    height: 30px;

    .client-details-title {
      font-weight: $font-weight-bolder;
      font-size: 20px;
      line-height: 16px;
      letter-spacing: 0.5px;
      color: $text-light-2;
    }
  }

  .client-details-layout {
    display: flex;

    .client-details-basic-card-holder {
      margin-bottom: 6px;
      padding: 0 15px 0 0;
      flex: 0;


    }

    .client-details-tab-wrapper {
      flex: 1;
      overflow: auto;
    }
  }

  .medical-record-alert{
    &.high{
      color: #FD0000;
    }

    &.medium{
      color: #FA9C2F;
    }
  }
}

